<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:id="@+id/activity_register_main_container"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <!-- Take 3 Logo-->
        <ImageView
            android:layout_marginTop="@dimen/logo_top_padding"
            android:id="@+id/activity_main_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/new_take3_logo"
            />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >
            <!--full name-->
            <EditText
                android:id="@+id/activity_register_et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/full_name" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >

            <!--Email field-->
            <EditText
                android:id="@+id/activity_register_et_email"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_alignParentStart="true"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >
        <!--Password Field-->
            <EditText
                android:id="@+id/activity_register_et_password"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>



        <!--register btn-->
        <Button
            android:id="@+id/activity_register_btn_register"
            android:background="@drawable/main_btn_register"

            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="25sp"


            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"

            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />




    </LinearLayout>

    <ProgressBar
        android:id="@+id/activity_register_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/prog_height"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/activity_register_tv_please_wait"
        android:layout_below="@id/activity_register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_please_wait"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>