<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/loginContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/main_bg"
    tools:context="com.example.nath.take3app.activity.logins.loginActivity">

    <!-- Take 3 Logo-->
    <ImageView
        android:layout_marginTop="@dimen/logo_top_padding"
        android:id="@+id/activity_login_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/new_take3_logo"
        />




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <!--Email field-->
        <EditText
        android:id="@+id/activity_login_et_username"
        android:hint="@string/email"
        android:inputType="textEmailAddress"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_login_logo"

        android:layout_alignParentStart="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <!--Password Field-->
        <EditText
        android:id="@+id/activity_login_et_password"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_login_et_username"
        android:layout_marginTop="@dimen/activity_horizontal_margin"

        android:hint="@string/password"
        android:inputType="textPassword"
        />
    </android.support.design.widget.TextInputLayout>




    <!--Button Login-->
        <Button
            android:id="@+id/activity_login_btn_login"
            android:background="@drawable/green_btn_main"

            android:text="@string/signIn"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textAllCaps="false"

            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"

            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />





</LinearLayout>