<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    tools:context="com.example.nath.take3app.activity.logins.MainActivity"
    android:background="@drawable/main_bg"

    >


    <!-- Take 3 Logo-->
    <ImageView
        android:layout_marginTop="@dimen/logo_top_padding"
        android:id="@+id/activity_main_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/new_take3_logo"
        />




    <!--Email field-->
    <!--<EditText-->
        <!--android:id="@+id/activity_main_et_username"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/email"-->
        <!--android:inputType="textEmailAddress"-->
        <!--android:layout_below="@+id/activity_main_logo"-->
        <!--android:layout_alignParentStart="true" />-->

    <!--Password Field-->
    <!--<EditText-->
        <!--android:id="@+id/activity_main_et_password"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/activity_main_et_username"-->
        <!--android:layout_marginTop="@dimen/activity_horizontal_margin"-->
        <!--android:hint="@string/password"-->
        <!--android:inputType="textPassword"-->
        <!--/>-->

    <RelativeLayout
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_logo"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >

        <!--Button Login-->
        <Button
            android:id="@+id/activity_main_btn_login"
            android:background="@drawable/green_btn_main"

            android:text="@string/signIn"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textAllCaps="false"

            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_centerHorizontal="true"

            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />

        <!--Login with fb btn-->
        <Button
            android:id="@+id/activity_main_btn_fbLogin"
            android:background="@drawable/main_btn_fblogin"
            android:drawableStart="@mipmap/ic_fb_logo"

            android:text="@string/fbLogin"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="20sp"


            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_below="@id/activity_main_btn_login"
            android:layout_centerHorizontal="true"

            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            />

        <!-- Line -->
        <ImageView
            android:layout_marginTop="@dimen/logo_top_padding"
            android:id="@+id/activity_main_line"

            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp"

            android:src="@drawable/main_screen_line2"
            android:layout_below="@id/activity_main_btn_login"
            />


        <!--register btn-->
        <Button
            android:id="@+id/activity_main_btn_register"
            android:background="@drawable/main_btn_register"

            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="25sp"


            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/activity_main_line"

            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />


    </RelativeLayout>

</RelativeLayout>
